--- a/djequis/templates/core/trustcommerce/download.html
+++ b/djequis/templates/core/trustcommerce/download.html
@@ -16,35 +16,28 @@
 </head>
 <body>
 <h3>
- This is now the Download page
+ Retrieve Credit Card Transactions (TAKE 2)
 </h3>
 
-<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms
-In views.py, objects is associated to the queries PCE_TRANSACTIONS, and PSM_TRANSACTIONS
-which then populate tcpayflow_results, djforms_results
-Those are, I think, put together by the "chain" command, which is essentially a union
-So for the second step, I would have to add a new variable for objects referencing another query
-How I pass a variable to it is another question....
--->
 <table cellpadding="1" cellspacing="0" border="0">
 
-        <td>Record = {{value}}</td>
+        <td>Record = {{id}}</td>
         <td>Activity = {{activity}}</td>
 
 </table>
 
-<!--{% if objects|length > 0 %}-->
+{% if objects|length > 0 %}
 
-    <!--<table cellpadding="1" cellspacing="0" border="0">-->
+    <table cellpadding="1" cellspacing="0" border="0">
     <!--&lt;!&ndash;<col width="300">&ndash;&gt;-->
     <!--&lt;!&ndash;<col width="150">&ndash;&gt;-->
     <!--&lt;!&ndash;<col width="100">&ndash;&gt;-->
 
-        <!--{% for obj in objects %}-->
-        <!--<tr>-->
-            <!--<td>Activity {{obj.0}}</td>-->
-            <!--<td>ID {{obj.1}}</td>-->
-            <!--<td>Record {{obj.2}}</td>-->
+     {% for obj in objects %}
+     <tr>
+            <td>Activity {{obj.0}}</td>
+            <td>ID {{obj.1}}</td>
+            <td>Record {{obj.2}}</td>
             <!--<td>Account {{obj.3}}</td>-->
             <!--<td>Amt {{obj.4}}</td>-->
             <!--<td>Cmt 1 {{obj.5}}</td>-->
@@ -58,8 +51,8 @@ How I pass a variable to it is another question....
             <!--<td>SelWTCode {{obj.13}}</td>-->
             <!--<td>CCNum {{obj.14}}</td>-->
             <!--<td>Datasource {{obj.15}}</td>-->
-        <!--</tr>-->
-    <!--</table>-->
+        </tr>
+    </table>
     <table>
                 <!--If enrichment -->
                 {% if activity == '1' %}
@@ -95,27 +88,13 @@ How I pass a variable to it is another question....
     <tr><td><input name="submit" type="submit" value="Submit"></td></tr>
 
 
-
-         <!--{% for obj in objects %}-->
-              <!--<tr class="{% cycle 'zebra1' 'zebra0' %}">-->
-                   <!--<td>{{obj.0}}</td>-->
-                   <!--<td>{{obj.1}}</td>-->
-                   <!--<td>{{obj.2}}</td>-->
-                  <!--<td>-->
-                      <!--TESTING-->
-                      <!--{% csrf_token %}-->
-                   <!--</td>-->
-              <!--</tr>-->
-           <!--{% endfor %}-->
-            <!--&lt;!&ndash;obj.aggregate(Sum({{obj.2}}))['column__sum']&ndash;&gt;-->
-
     <!--<p>-->
         <!--We have {{objects|length}} group{{objects|length|pluralize}} with credit card activity.-->
     <!--</p>-->
 
-<!--{% else %}-->
-   <!--<p>There are no app fee transactions to import.</p>-->
-<!--{% endif %}-->
+{% else %}
+   -<p>There are no app transactions to import.</p>
+{% endif %}
 
 </body>
 
